@@ -69,11 +69,6 @@ public:
     */
     virtual QString getTitleAndParameters();
 
-    /**
-     * @brief testInputs() tests origin, dimension and spacing of the input
-     * @return medAbstractProcess::DataError according to the test result
-    */
-    medAbstractProcessLegacy::DataError testInputs();
 protected :
     /**
      * @brief
