@@ -1,3 +1,8 @@
+MUSICardio 4.0.5:
+- Allow to use data with different size or spasing in LCCLogDemons and DiffeomorphicDemons.
+- Manual Registration: enhance landmarks numbers for better user understanding.
+- Fix Histogram Analysis width problem displaying multi-results.
+
 MUSICardio 4.0.4:
 - Fix some plugins wrongly loaded on Windows.
 
